Thu, Jan 1, 2009 -- Happy New Year!
---------------------------------------------------------------------
- Created [account_contacts], [account_opportunities], and [contact_opportunities] join tables.
- Implemented HTML designs and JavaScript for [Lead/Convert] and [Contact/New] forms (with backend stubs).

Wed, Dec 31, 2008
---------------------------------------------------------------------
- More design work on [Lead/Convert] and [Contact/New] forms.

Tue, Dec 30, 2008
---------------------------------------------------------------------
- Added new view/edit/delete icons, started with [Lead/Convert].
- Minor changes in [opportunities] migration.

Mon, Dec 29, 2008
---------------------------------------------------------------------
- More work on opportunity index page.
- Fixed find() class override in [uses_mysql_uuid] plugin.

Sun, Dec 28, 2008
---------------------------------------------------------------------
- Added opportunity stage settings and colors.
- Created opportunities fixtures and started with opportunity index page.

Sat, Dec 27, 2008
---------------------------------------------------------------------
- Added find() override in [uses_mysql_uuid] plugin to make it possible to use find() instead of find_by_uuid().
- Added [contacts] and [opportunities] database migrations.
- Generated [opportunity] scaffold, added [contacts] fixtures.

Fri, Dec 26, 2008
---------------------------------------------------------------------
- Some model and javascript refactoring.
- Another sweep at specs to make them pass with the introduction of UUIDs.

Thu, Dec 25, 2008
---------------------------------------------------------------------
- Update campaign lead count and conversion ratio when creating a new lead.
- Make sure :uuid gets reloaded from the database and not from cached attributes.
- Added extra fields to [User] model and implemented [User/Edit profile].

Wed, Dec 24, 2008
---------------------------------------------------------------------