@@ -15,6 +15,6 @@ class AccountContact < ActiveRecord::Base
   belongs_to :account
   belongs_to :contact
   validates_presence_of :account_id, :contact_id
-
+  validates_uniqueness_of :contact_id, :scope => :account_id, :message => "^The account already has this contact."
   acts_as_paranoid
 end
