@@ -1,3 +1,3 @@
 #footer
-  == Powered by #{link_to "Fat Free CRM", "http://www.fatfreecrm.com"} &copy; 2008 by Michael Dvorkin
+  == Powered by #{link_to "Fat Free CRM", "http://www.fatfreecrm.com"} &copy; 2008-#{Date.today.year} by Michael Dvorkin
 %br
